correct connection problem to database

--- a/includes/mysql-config.json
+++ b/includes/mysql-config.json
@@ -1,5 +1,6 @@
 {
-    "pseudo": "root",
-    "password": "",
-    "db-name": "le-point-k"
+    "pseudo": "le-point-k",
+    "password": "k-p-ointlek",
+    "db-name": "le-point-k",
+    "port": 3307
 }
